--- a/impl/manager/.env.example
+++ b/impl/manager/.env.example
@@ -7,5 +7,5 @@ POSTGRES_PORT=5432
 POSTGRES_SSL_MODE=disable
 
 # ======== Application
-API_KEY="example"
-PORT=3000
+APP_API_KEY="example"
+APP_PORT=3000
