--- a/impl/dashboard/package.json
+++ b/impl/dashboard/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
     "@nuxt/ui": "^2.15.2",
@@ -17,5 +18,9 @@
     "vue-router": "^4.3.0",
     "vue-toastification": "2.0.0-rc.5",
     "zod": "^3.23.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5",
+    "vue-tsc": "^1"
   }
 }
