--- a/impl/manager/.env.example
+++ b/impl/manager/.env.example
@@ -7,5 +7,8 @@ POSTGRES_PORT=5432
 POSTGRES_SSL_MODE=disable
 
 # ======== Application
-APP_API_KEY="example"
-APP_PORT=3000
+APP_API_KEY=""
+APP_JWT_KEY=""
+APP_ADMIN_API_KEY=""
+APP_PORT=8000
+APP_FE_URL=""
